# ECS-Sandbox

./: CMakeLists.txt  README.md  component.hpp  component_array.hpp  component_manager.hpp  entity.hpp  entity_manager.hpp  main.cpp  manager_manager.hpp  print_system.hpp  system.hpp  system_manager.hpp
Components/: print.hpp  transform.hpp
